fixing spacing issues on mobile, making it more consistently centered

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -61,3 +61,10 @@ h1 {
     color: inherit;
     border: 3px solid green;
 }
+
+@media screen and (max-width: 767px) {
+    #header {
+        margin-left: auto;
+        margin-right: auto;
+    }
+}
